<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.DetailsNotificationActivity">

    <RelativeLayout
        android:id="@+id/vieww"
        android:layout_width="match_parent"
        android:minHeight="?actionBarSize"
        android:elevation="5dp"
        android:layout_height="wrap_content" tools:targetApi="lollipop">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/logo" />
        <RelativeLayout
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/imgBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_logo"
                android:singleLine="true"
                android:ellipsize="end"
                android:maxEms="20"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:text="@string/details"
                android:fontFamily="@font/bold"
                android:textColor="#FFF"
                android:textSize="18sp"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:src="@drawable/ic_share"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo" />
        </RelativeLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/viewwwww"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:background="@drawable/bg_title"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:fontFamily="@font/bold"
                android:textSize="20sp"
                android:text="@string/gi_i_p_v_vi_r_t_corona_ch_ng_m_i_thu_c_avigan_hi_u_qu_ra_sao"
                android:layout_height="wrap_content">
            </TextView>

            <TextView
                android:id="@+id/tvAuthorDate"
                android:layout_width="wrap_content"
                android:fontFamily="@font/regular"
                android:text="@string/minh_anh_04_11_2020"
                android:layout_below="@+id/tvTitle"
                android:layout_alignParentEnd="true"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

            <ImageView
                android:id="@+id/imgNews"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/viewwwww"
                tools:ignore="UnusedAttribute"
                android:contentDescription="@string/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgNews"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/news_example"
                    android:textColor="#FFF"
                    android:textSize="17sp" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>